Reject GPSTether and bound diagnostic UI